# tacent

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  meson.build
Contrib/CxImage/: CMakeLists.txt  CxImage.sln  CxImgLib.sln  readme.txt
Contrib/CxImage/CxImage/: CMakeLists.txt  cximage.vcxproj  tif_xfile.cpp  ximacfg.h  ximadsp.cpp  ximage.h  ximapng.cpp  ximapsd.h  ximaraw.h
Contrib/CxImage/Inc/: ximacfg.h  ximajpg.h  ximapsd.h  ximaraw.h  ximatif.h
Contrib/CxImage/Src/: ximatif.cpp
Contrib/CxImage/Src/dcr/: CMakeLists.txt
Contrib/CxImage/Src/jpeg/: CMakeLists.txt
Contrib/CxImage/Src/png/: CMakeLists.txt  pngread.c  pngstruct.h
Contrib/CxImage/dcr/: CMakeLists.txt  libdcr.vcxproj
Contrib/CxImage/jasper/: CMakeLists.txt  jasper.vcxproj
Contrib/CxImage/jpeg/: CMakeLists.txt  Jpeg.vcxproj
Contrib/CxImage/mng/: CMakeLists.txt  mng.vcxproj
Contrib/CxImage/png/: CMakeLists.txt  png.vcxproj
Contrib/CxImage/psd/: CMakeLists.txt  libpsd.h  libpsd.vcxproj
Contrib/CxImage/tiff/: CMakeLists.txt  Tiff.vcxproj  tif_jpeg.c
Contrib/CxImage/ximage/: CMakeLists.txt  ximage.vcxproj
Contrib/CxImage/zlib/: CMakeLists.txt  zlib.vcxproj
Contrib/ZLib/: CMakeLists.txt  Readme_BuildZLib.txt
InputVis/: CMakeLists.txt
InputVis/Src/: InputVisualizer.cpp
Modules/: .gitignore  CMakeLists.txt
Modules/Foundation/: CMakeLists.txt  Readme.txt  meson.build
Modules/Foundation/Linux/: .gitignore  Foundation.mk  Foundation.project
Modules/Foundation/Src/: bString.cpp  project_tacent_version.cpp  tAssert.cpp  tBitArray.cpp  tHash.cpp  tMemory.cpp  tPlatform.cpp  tPool.cpp  tStandard.cpp  tString.cpp  tSync.cpp  tUnits.cpp  tVersion.cpp
Modules/Foundation/Win/: Foundation.vcxproj
Modules/Foundation/Windows/: Foundation.vcxproj  Foundation.vcxproj.filters
Modules/Image/: CMakeLists.txt  Readme.txt
Modules/Image/Linux/: .gitignore  Image.mk  Image.project  Image.txt  compile_flags.txt
Modules/Image/Src/: tCubemap.cpp  tImageAPNG.cpp  tImageASTC.cpp  tImageBMP.cpp  tImageDDS.cpp  tImageEXR.cpp  tImageGIF.cpp  tImageHDR.cpp  tImageICO.cpp  tImageJPG.cpp  tImageKTX.cpp  tImagePKM.cpp  tImagePNG.cpp  tImagePVR.cpp  tImageQOI.cpp  tImageTGA.cpp  tImageTIFF.cpp  tImageWEBP.cpp  tImageXPM.cpp  tLayer.cpp  tMetaData.cpp  tPaletteImage.cpp  tPicture.cpp  tPixelFormat.cpp  tPixelUtil.cpp  tQuantize.cpp  tQuantizeFixed.cpp  tQuantizeNeu.cpp  tQuantizeSpatial.cpp  tQuantizeWu.cpp  tResample.cpp  tTexture.cpp
Modules/Image/Win/: Image.vcxproj
Modules/Input/: CMakeLists.txt  Readme.txt
Modules/Input/Inc/: Readme.txt
Modules/Input/Src/: tComp.cpp  tCompButton.cpp  tCompDial.cpp  tCompDirPad.cpp  tCompJoystick.cpp  tCompPedal.cpp  tCompScrubber.cpp  tCompSelector.cpp  tCompSlider.cpp  tCompSwitch.cpp  tCompTrigger.cpp  tCompWheel.cpp  tCont.cpp  tContGamepad.cpp  tContRacingWheel.cpp  tControllerDefinitions.cpp  tControllerInfo.cpp  tControllerSystem.cpp  tInputSystem.cpp  tUnit.cpp  tUnitAxis.cpp  tUnitBoolState.cpp  tUnitContinuousAxis.cpp  tUnitContinuousDisp.cpp  tUnitContinuousWind.cpp  tUnitDiscreteBool.cpp  tUnitDiscreteMulti.cpp  tUnitDisp.cpp  tUnitMultiState.cpp
Modules/Math/: CMakeLists.txt
Modules/Math/Linux/: .gitignore  Math.mk  Math.project  Math.txt  compile_flags.txt
Modules/Math/Src/: tColour.cpp  tGeometry.cpp  tHash.cpp  tLinearAlgebra.cpp  tRandom.cpp  tSpline.cpp
Modules/Math/Win/: Math.vcxproj
Modules/Pipeline/: CMakeLists.txt
Modules/Pipeline/Src/: tProcess.cpp  tRule.cpp  tSolution.cpp
Modules/Pipeline/Windows/: Pipeline.sln  Pipeline.vcxproj
Modules/Scene/: CMakeLists.txt
Modules/Scene/Inc/: Readme.txt
Modules/Scene/Linux/: Scene.txt
Modules/Scene/Src/: tAttribute.cpp  tCamera.cpp  tInstance.cpp  tLight.cpp  tLodGroup.cpp  tMaterial.cpp  tMesh.cpp  tObject.cpp  tPath.cpp  tPolyModel.cpp  tSelection.cpp  tSkeleton.cpp  tWorld.cpp
Modules/Scene/Win/: Scene.vcxproj
Modules/System/: CMakeLists.txt  meson.build
Modules/System/Linux/: .gitignore  System.mk  System.project  System.txt
Modules/System/Src/: tChunk.cpp  tCmdLine.cpp  tCommand.cpp  tFile copy.cpp  tFile.cpp  tMachine.cpp  tPrint.cpp  tRegex.cpp  tScript.cpp  tTask.cpp  tThrow.cpp  tTime.cpp
Modules/System/Win/: System.vcxproj
UnitTests/: .gitignore  CMakeLists.txt  UnitTests.sln  UnitTests.vcxproj
UnitTests/Linux/: .gitignore  Makefile  UnitTests.mk  UnitTests.project  UnitTests.workspace  fixup_makefiles_for_github_runner.sh
UnitTests/Linux/.build-release/: .gitignore
UnitTests/Linux/.codelite/: .gitignore
UnitTests/Linux/Debug/: .gitignore  UnitTests
UnitTests/Linux/Release/: .gitignore  UnitTests
UnitTests/Src/: TestBuild.cpp  TestFoundation.cpp  TestFoundation.h  TestImage.cpp  TestImage.h  TestInput.cpp  TestInput.h  TestMath.cpp  TestMath.h  TestPipeline.cpp  TestPipeline.h  TestSystem.cpp  TestSystem.h  UnitTests.cpp  UnitTests.h
UnitTests/TestData/: .HiddenFile.txt  .gitignore  Readme.txt  TestScript.txt  Tiff_JPEG.tif  Tiff_Multipage_JPEG.tif  WrittenScript.txt  WrittenTestDXT1.tac  WrittenWiredDrives.tga  WrittenXeyes.tga
UnitTests/TestData/.HiddenDir/: NotHidden.txt
UnitTests/TestData/Images/: Corrupt.tga  Crane.xpm  Desk512x512.exr  Desk640.tga  Dock512.tga  Dock640.tga  Dock640_4ColoursOnly.tga  Readme.txt  ReversedAlpha16Bit_5551.tga  TacentTestPattern1024x512.tga  TacentTestPattern24Bit1024x512.tga  TacentTestPattern256x256.tga  TacentTestPattern32BGRA.tga  TacentTestPattern512x256.tga
UnitTests/TestData/UTF/: Readme.txt  UTF16.txt  UTF32.txt  UTF8.txt
UnitTests/Win/: UnitTests.sln  UnitTests.vcxproj
UnitTests/Windows/: UnitTests.sln  UnitTests.vcxproj
Visualizer/: CMakeLists.txt
Visualizer/Src/: Visualizer.cpp
Visualizer/Windows/: Visualizer.rc  resource.h
Woboq/: CMakeLists.txt  Readme.txt  WoboqGen  WoboqTacent.cfg  codebrowser_generator  codebrowser_indexgenerator  compile_commands_generated.json  gen_tacent_html
Woboq/Src/: WoboqGen.cpp
Woboq/www/data/: codebrowser.js  common.css  indexscript.js  indexstyle.css  kdevelop.css  qtcreator.css  solarized.css  symbol.html
(+45204 files in other folders)
