project(Modules VERSION ${TACENT_VERSION})

# option(BUILD_STATIC_LIBS "Build the static library" ON)
if (TacentWindowsUTF16API)
	message(STATUS "Tacent -- Windows UTF16 API.")
else()
	message(STATUS "Tacent -- Windows UTF8 API.")
endif()

add_subdirectory(Foundation)
add_subdirectory(Math)
add_subdirectory(System)

tacent_is_arch_arm(IsArm)
if (IsArm)
	message(STATUS "Tacent -- Arm Architecture. Excluding Some Modules.")
else()
	add_subdirectory(Image)
	add_subdirectory(Pipeline)
	add_subdirectory(Scene)
endif()
